# HellHeimRpg

./: .gitignore  CMakeLists.txt  Makefile  README.md  art.cpp  art.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  main.cpp  picker.cpp  picker.hpp  run
assets/meshes/: house.blend  monkey.mtl  test_scene.blend  test_scene.blend1  test_scene.mtl
assets/shaders/: basic.fs  basic.vs  screen.fs  screen.vs
assets/textures/: texture_set_1.aseprite
